Заменены старые методы